# file-search-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  compile_commands.json  main.cpp
includes/: DbHandler.h  Lexer.h
source/: DbHandler.cpp  Lexer.cpp
