cmake_minimum_required(VERSION 3.7)
project(Search)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(SQLITECPP_RUN_CPPCHECK OFF CACHE BOOL "" FORCE)
set(SQLITECPP_RUN_CPPLINT OFF CACHE BOOL "" FORCE)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_BUILD_TYPE RelWithDebInfo)
add_subdirectory(SQLiteCpp)
add_subdirectory(fmt)
file(GLOB sourcefiles "source/*.cpp")
find_package(ICU REQUIRED COMPONENTS uc i18n io)

if(NOT ICU_FOUND)
    message(FATAL_ERROR "ICU library not found. Please make sure ICU is installed.")
endif()

add_executable(search main.cpp ${sourcefiles})
target_include_directories(search PUBLIC includes )
target_link_libraries(search SQLiteCpp fmt ICU::uc ICU::io ICU::i18n)
